<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/export_tip"
        android:textAppearance="?attr/textAppearanceBodyMedium"
        android:textColor="@color/text_secondary" />

    <RadioGroup
        android:id="@+id/scaleGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radio1x"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/export_1x" />

        <RadioButton
            android:id="@+id/radio2x"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/export_2x" />
    </RadioGroup>
</LinearLayout>
